<resources>
    <string name="app_name">安卓架构</string>
    <string name="home">首页</string>
    <string name="lottery">彩票</string>
    <string name="title_notifications">Notifications</string>

    <string name="open_browser">Open Browser</string>
    <string name="app_has_been_switched_to_background">安卓架构已经切换至后台</string>
    <string name="app_will_be_killed_to_free_memory">由于手机内存不足，安卓架构将被杀死用于释放内存</string>
    <string name="press_back_again_exit_app">再按一次返回退出应用</string>

    <item name="onPageChangeListener" type="id" />

    <string name="lottery_no">开奖期号</string>
    <string name="lottery_result">开奖结果</string>
    <string name="lottery_date">开奖日期</string>
    <string name="lottery_expire_date">兑奖截止日期</string>

    <string name="terminal">命令行</string>
    <string name="terminal_add">新建</string>
    <string name="terminal_help">帮助</string>
    <string name="terminal_prompt">提示</string>
    <string name="terminal_sync">同步</string>
    <string name="terminal_chart">报表</string>
    <string name="back">返回</string>
    <string name="terminal_why_to_apply_for_write_storage">在命令行中执行的某些命令(如: mkdir, touch)需要应用具有写权限, 是否立即授予</string>
    <string name="terminal_open_write_storage_in_pm">在命令行中执行的某些命令(如: mkdir, touch)需要应用具有写权限, 请在权限管理功能中开启写权限</string>
    <string name="syncing">正在同步</string>
    <string name="sync_success">同步成功</string>

    <string name="red_ball">红球</string>
    <string name="blue_ball">蓝球</string>
    <string name="lottery_chart_no_data">暂无开奖记录</string>
    <string name="average_forecast">平均线预测</string>
    <string name="gold_ratio_forecast">黄金比例预测</string>
    <string name="intelligent_a_forecast">智能A预测</string>
</resources>
