<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="com.jing.android.arch.demo.repo.db.LotteryResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lottery_no"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{item.lotteryNo}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_no_label"
            app:layout_constraintLeft_toRightOf="@+id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_no_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/lottery_result"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_no_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{item.result}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_result_label"
            app:layout_constraintLeft_toRightOf="@id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_result_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/lottery_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{item.resultDate}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date_label"
            app:layout_constraintLeft_toRightOf="@id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_date_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_expire_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/lottery_expire_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_expire_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{item.expireDate}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_expire_date_label"
            app:layout_constraintLeft_toRightOf="@id/barrier"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_expire_date_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="tv_no_label, tv_result_label, tv_date_label, tv_expire_date_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
